--- a/hw05/src/index.html
+++ b/hw05/src/index.html
@@ -98,7 +98,7 @@ limitations under the License.
 <script>
   var imgIndex = 1;
 
-  document.body.style.backgroundImage = `url(./images/${imgIndex}.jpg)`;
+  document.body.style.backgroundImage = `url(./images/${imgIndex}.png)`;
 
   document.addEventListener("keydown", function(event) {
   if (event.keyCode === 40) {
@@ -106,7 +106,7 @@ limitations under the License.
     if(imgIndex == 8) {
       imgIndex = 1;
     }
-    document.body.style.backgroundImage = `url(./images/${imgIndex}.jpg)`;
+    document.body.style.backgroundImage = `url(./images/${imgIndex}.png)`;
   }
 
   if (event.keyCode === 38) {
@@ -114,7 +114,7 @@ limitations under the License.
     if(imgIndex == 0) {
       imgIndex = 7;
     }
-    document.body.style.backgroundImage = `url(./images/${imgIndex}.jpg)`;
+    document.body.style.backgroundImage = `url(./images/${imgIndex}.png)`;
   }
 });
 
