--- a/hw05/src/index.html
+++ b/hw05/src/index.html
@@ -27,9 +27,10 @@ limitations under the License.
         margin: 0;
         position: absolute;
         overflow: hidden;
-        background-repeat: repeat;
+        background-repeat:no-repeat;
         background-position: center;
         background-color: white;
+        width: 100%;
       }
 
     #stats {
